# J1League-_score_prediction_site

./: .gitignore  README.md  pyproject.toml  requirements.txt
Models/: feature_policy.json  model_features.pkl  model_metadata.json  model_step1_goals.pkl  model_step2_clf.pkl  model_step2_diff.pkl
Notebook/: 01_Data_Preparation.ipynb  02_ML_Table.ipynb  03_Bayer_Table (Goal Player).ipynb  03_EDA_score_prediction.ipynb  04_ML_Model_Training.ipynb  05_Bayer_Table (Goal Player).ipynb  df_player_stats.csv
app/: streamlit_app.py
archive/: README.md
docs/: README.md  index.html  week1_completion_report.md
outputs/: all_unplayed_predictions.csv  all_unplayed_predictions.json  last_updated.txt  latest_predictions.csv  latest_predictions.json  past_prediction_results.json
scripts/: build_model_metrics.py  build_past_prediction_results.py  build_point_in_time_training_dataset.py  evaluate_weather_feature.py  full_pipeline.py  make_upcoming_features.py  retrain_models_no_weather.py  run_prediction.py  smoke_test_load_models.py  smoke_test_predict_match.py  update_2026_data.py  update_2026_special_data.py  validate_past_prediction_results.py  validate_prediction_outputs.py
soccer_score_app/: __init__.py
src/: __init__.py  config.py
tests/: conftest.py  test_actions_workflow.py  test_app_evaluation_labels.py  test_latest_predictions_schema.py  test_model_feature_columns.py  test_model_metrics.py  test_no_weather_features.py  test_past_prediction_results.py  test_point_in_time_features.py  test_prediction_modes.py  test_scheduled_workflows.py  test_scorer_candidates.py  (+2 more)
(+240 files in other folders)
